fix: dialog backdrop not showing properly

--- a/src/components/GameDataModal/GameDataModal.module.css
+++ b/src/components/GameDataModal/GameDataModal.module.css
@@ -43,6 +43,7 @@
 
     .dialog::backdrop {
         margin: 0;
+        background: rgba(0, 0, 0, 0.6);
     }
 }
 
